Removed trash, from files

--- a/src/style/common/common.styl
+++ b/src/style/common/common.styl
@@ -1,5 +1,11 @@
-.text {
-  font-family Helvetica-Regular, Arial, sans-serif;
-  font-size: 18px;
-  color: rgba($white, .3);
+* {
+  padding 0
+  margin 0
+  box-sizing border-box
+}
+
+html, body {
+  font-family: $baseFont
+  font-weight: 400
+  line-height: 1.2em
 }
