--- a/src/style/util/variables.styl
+++ b/src/style/util/variables.styl
@@ -13,6 +13,7 @@ $grayText = #7b7b7b;
 *******************************/
 
 $baseClass = ".werb";
+$baseFont = "Arial, sans-serif";
 
 $bg-color = rgb(0, 0, 0);
 $font-color = rgb(255, 255, 255);
