Обновлена структура stylus файлов.

--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -1,23 +1,14 @@
-// Utils
-@import "../style/util/variables.styl";
-@import "../style/util/fonts.styl";
-@import "../style/util/grid.styl";
-@import "../style/util/mixins.styl";
+// Константы
+@import "__constants/*"
 
+// Миксины
+@import "__mixins/*"
 
-// Libs
-@import "../js/vendor/normalize.css/normalize.css";
+// Компоненты
+@import "components/*"
 
-// Components
+// Плагины / Либы / Vendor
+@import "vendor/*"
 
-
-// Common
-@import "../style/common/header.styl";
-@import "../style/common/footer.styl";
-@import "../style/common/common.styl";
-
-
-
-// Pages
-@import "../style/pages/index.styl";
-
+// Страницы
+@import "pages/*"
