Удалён мусор из jade шаблонов. Архитектура.

--- a/src/index.jade
+++ b/src/index.jade
@@ -1,7 +1,7 @@
 extends ./templates/base.jade
 
 block title
-    title  Index Page
+    title  Главная страница
 
 block content
-    h1 Hello World
+    h1 Привет мир!
