--- a/src/style/__constants/fonts.styl
+++ b/src/style/__constants/fonts.styl
@@ -1,7 +1,8 @@
 // Используемые шрифты
 $font-normal    =    Arial, Helvetica, FreeSans, 'Liberation Sans', 'Nimbus Sans L', sans-serif;
-$font-alternate =    Roboto, iviextras, 'Trebuchet MS', @font-normal;
-$font-common    =    'PT Sans', Tahoma, Arial, Helvetica, FreeSans, sans-serif;
+$font-alternate =    Roboto, iviextras, 'Trebuchet MS';
+$font-common    =    Arial, Helvetica, FreeSans, sans-serif;
+
 
 // Размеры шрифтов и интерлиньяжей
 $text_small_font-size =      12px;
