--- a/src/style/components/common.styl
+++ b/src/style/components/common.styl
@@ -5,7 +5,6 @@
 }
 
 html, body {
-  font-family: $baseFont
-  font-weight: 400
-  line-height: 1.2em
+  font-family: $font-common
+  font-weight normal
 }
