--- a/src/index.jade
+++ b/src/index.jade
@@ -1,7 +1,8 @@
 extends ./templates/base.jade
 
-block title
-    title  Главная страница
+block head
+	title  Главная страница
 
 block content
-    h1 Привет мир!
+	- console.log(Data[1])
+	h1 #{Data.title}
