Added tasks for stylus and js. Fixed problems with gulp-data.

--- a/src/templates/base.jade
+++ b/src/templates/base.jade
@@ -8,7 +8,7 @@ html(lang='ru')
 			title
 						
 		block vars
-			- var Data = [_data]
+			- var Data = [_data][0]
 	body
 		include  ./util/mixins.jade
 
