--- a/src/index.jade
+++ b/src/index.jade
@@ -1,8 +1,8 @@
 extends ./templates/base.jade
 
 block head
-	title  Главная страница
+	title Главная страница
 
 block content
-	- console.log(Data[1])
+	- console.log(Data.title)
 	h1 #{Data.title}
