Added browsersync, cleaner

--- a/src/templates/base.jade
+++ b/src/templates/base.jade
@@ -5,7 +5,7 @@ html(lang='ru')
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		link(rel='stylesheet', href='css/main.css')
 		block head
-			title
+			title заголовок страницы
 						
 		block vars
 			- var Data = [_data][0]
