Улучшен base.jade, мелкие правки.

--- a/src/style/__constants/colors.styl
+++ b/src/style/__constants/colors.styl
@@ -1,10 +1,7 @@
-// Цветовые константы
+/** @color Чёрный */
+$_c__black = #000
+/** @color Белый */
+$_c__white = #fff
+/** @color Белый активный/наведённый */
+$_c__white-active = #fff2f5
 
-$_c-red = #ec174f
-$_c-red-active = #bc123f
-$_c-blue = #00a5ff
-$_c-green = #7ea700
-$_c-black = #000000
-$_c-white = #ffffff
-$_c-orange = #f5a623
-$_c-purple = #a05adc
