--- a/src/style/__constants/fonts.styl
+++ b/src/style/__constants/fonts.styl
@@ -1,13 +1,4 @@
 // Используемые шрифты
-$font-normal    =    Arial, Helvetica, FreeSans, 'Liberation Sans', 'Nimbus Sans L', sans-serif;
-$font-alternate =    Roboto, iviextras, 'Trebuchet MS';
-$font-common    =    Arial, Helvetica, FreeSans, sans-serif;
-
-
-// Размеры шрифтов и интерлиньяжей
-$text_small_font-size =      12px;
-$text_small_line-height =    16px;
-$text_medium_font-size =     14px;
-$text_medium_line-height =   20px;
-$text_large_font-size =      18px;
-$text_large_line-height =    22px;
+$font-normal    =    Arial, Helvetica, FreeSans, 'Liberation Sans', 'Nimbus Sans L', sans-serif
+$font-alternate =    Roboto, iviextras, 'Trebuchet MS'
+$font-common    =    Arial, Helvetica, FreeSans, sans-serif
