--- a/src/style/pages/index.styl
+++ b/src/style/pages/index.styl
@@ -1,15 +1,1 @@
-/*
- * Index Page
- */
-
-h1
-  &::before
-    content: ''
-    display: inline-block
-    sprite($s-icon-sprite)
-
-  &::after
-    content: ''
-    display: inline-block
-    sprite($s-icon-sprite)
-
+// Page index
