--- a/src/style/__base/base.styl
+++ b/src/style/__base/base.styl
@@ -1,10 +1,9 @@
-* {
-	padding 0
-	margin 0
-	box-sizing border-box
-}
+*
+	padding: 0
+	margin: 0
+	box-sizing: border-box
 
-html, body {
+html,
+body
 	font-family: $font-common
-	font-weight normal
-}
+	font-weight: normal
