--- a/src/style/_typography/_typography__mixins.styl
+++ b/src/style/_typography/_typography__mixins.styl
@@ -1,1 +1,9 @@
 @import '_typography__constants'
+
+/**
+ * @mixin Применить стиль, соответствующий определённому типу элемента.
+ */
+
+_typography__style($type)
+	for $prop, $val in $type
+		{$prop}: $val
