--- a/src/index.jade
+++ b/src/index.jade
@@ -1,8 +1,4 @@
 extends ./templates/base.jade
 
-block head
-	title Главная страница
-
 block content
-	- console.log(Data.title)
-	h1 #{Data.title}
+	h1 frklfkerl fk;rekferkfel;;
