--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -1,16 +1,2 @@
-// Константы
-@import "__constants/*"
-
-// Миксины
-@import "__mixins/*"
-
-@import "__base/*"
-
-// Компоненты
-@import "components/*"
-
-// Плагины / Либы / Vendor
-@import "vendor/*.css"
-
-// Страницы
-@import "pages/*"
+@require '_common/*'
+@require 'components/*'
