--- a/src/templates/components/header.jade
+++ b/src/templates/components/header.jade
@@ -1,17 +1,1 @@
-header.header
-	.header__container
-		.header__logo
-		nav.header__nav
-			ul.nav
-				- var nav = ["Меню", "Галерея", "Банкеты", "Контакты"]
-				- for (var i = 0; i < nav.length; i++)
-					li: a(href="#").nav__item #{nav[i]}
-		.header__contacts
-			a(href="tel:+7(495)229-28-00").link 
-				span + 7 (495) 
-				|229 2800
-		.header__btn
-			.btn Заказать столик
-		.header__links
-			a(href="#") Рус
-			a(href="#") Eng
+// Header
