--- a/src/style/_common/_base/_base__constants.styl
+++ b/src/style/_common/_base/_base__constants.styl
@@ -5,3 +5,5 @@ $tablet = "screen and (min-width= 769px) and (max-width= 1024px)";
 $desktop = "screen and (min-width= 1025px) and (max-width= 1499px)";
 $hr-desktop = "screen and (min-width= 1500px)";
 $retina = (-webkit-min-device-pixel-ratio= 2), (min-resolution= 192dpi);
+
+$canvas-width = 1000px
