png sprite + svg iconFont

--- a/src/style/_common/_svg-icon/_svg-icon.styl
+++ b/src/style/_common/_svg-icon/_svg-icon.styl
@@ -1,13 +1,12 @@
 @import "__"
 
-.icon
-	//_svg-icon__all($_allIcons)
+_svg-icon__all($_allIcons)
 
-//@font-face
-//	font-family: $_i__font-name;
-//	src: url('../fonts/'+$_i__font-name+'.eot');
-//	src: url('../fonts/'+$_i__font-name+'.eot?#iefix') format('eot'),
-//		url('../fonts/'+$_i__font-name+'.woff') format('woff'),
-//		url('../fonts/'+$_i__font-name+'.ttf') format('truetype')
-//	font-weight: normal
-//	font-style: normal
+@font-face
+	font-family: $_i__font-name;
+	src: url('../fonts/'+$_i__font-name+'.eot');
+	src: url('../fonts/'+$_i__font-name+'.eot?#iefix') format('eot'),
+		url('../fonts/'+$_i__font-name+'.woff') format('woff'),
+		url('../fonts/'+$_i__font-name+'.ttf') format('truetype')
+	font-weight: normal
+	font-style: normal
