--- a/src/style/_common/_svg-icon/_svg-icon__constants.styl
+++ b/src/style/_common/_svg-icon/_svg-icon__constants.styl
@@ -1,9 +1,7 @@
-$_i__fefrefer = '\ea01'
-$_i__share = '\ea02'
-$_i__share2 = '\ea03'
+$_i__share = '\ea01'
 
 
 // Все иконки
-$_allIcons = fefrefer,share,share2
+$_allIcons = share
 
 $_i__font-name = svg-icons
