--- a/src/style/_common/_svg-icon/_svg-icon__constants.styl
+++ b/src/style/_common/_svg-icon/_svg-icon__constants.styl
@@ -1,7 +1,22 @@
-$_i__share = '\ea01'
+$_i__Book = '\ea01'
+$_i__Brush = '\ea02'
+$_i__Eraser = '\ea03'
+$_i__Eye = '\ea04'
+$_i__Eyedropper = '\ea05'
+$_i__Paintbucket = '\ea06'
+$_i__Pencil = '\ea07'
+$_i__Photo = '\ea08'
+$_i__Text = '\ea09'
+$_i__desserts = '\ea0a'
+$_i__main = '\ea0b'
+$_i__pies = '\ea0c'
+$_i__salads = '\ea0d'
+$_i__share = '\ea0e'
+$_i__side_dizhes = '\ea0f'
+$_i__soups = '\ea10'
 
 
 // Все иконки
-$_allIcons = share
+$_allIcons = Book,Brush,Eraser,Eye,Eyedropper,Paintbucket,Pencil,Photo,Text,desserts,main,pies,salads,share,side_dizhes,soups
 
 $_i__font-name = svg-icons
