Добавлены шрифты, неболшой рефакторинг констант шрифта, приведение к общему стилю в нейминге

--- a/src/interactive.jade
+++ b/src/interactive.jade
@@ -3,6 +3,6 @@ extends templates/base
 block content
 	h1 Svg иконки, конвертирвоанные в шрифт
 	
-	- var Icons = ['Book',	'Brush',	'desserts',	'Eraser',	'Eye',	'Eyedropper',	'main',	'Paintbucket',	'Pencil',	'Photo',	'pies',	'salads',	'share',	'side_dizhes',	'soups',	'Text']	
+	- var Icons = ['book','brush','eraser','eye','eyedropper','paintbucket','pencil','photo','text']
 	- for (var i = 0; i < Icons.length; i++)
 		.icon(class='icon_'+Icons[i])
