--- a/src/style/_common/_base/_base.styl
+++ b/src/style/_common/_base/_base.styl
@@ -1,7 +1,13 @@
 @import '__'
+@import '../_font/__'
+@import '../_color/__'
 
 *
 	padding: 0
 	margin: 0
 	box-sizing: border-box
 
+html,
+body
+	font-family: $_f__lato-regular
+	background-color: $_c__light
