--- a/src/style/_common/_font/_font__constants.styl
+++ b/src/style/_common/_font/_font__constants.styl
@@ -1,4 +1,8 @@
-// Используемые шрифты
-$font-normal    =    Arial, Helvetica, FreeSans, 'Liberation Sans', 'Nimbus Sans L', sans-serif
-$font-alternate =    Roboto, iviextras, 'Trebuchet MS'
-$font-common    =    Arial, Helvetica, FreeSans, sans-serif
+// Шрифты
+$_f__base = Arial, Helvetica, FreeSans, sans-serif
+$_f__lato-regular = 'latoregular', $_f__base
+$_f__lato-light = 'latolight', $_f__base
+$_f__nautilus = 'nautilus', $_f__base
+
+// Применяется по умолчанию к body
+$_f__common = $_f__lato-regular
