--- a/src/style/_common/_sprite/_sprite__constants.styl
+++ b/src/style/_common/_sprite/_sprite__constants.styl
@@ -1,3 +1,9 @@
-    $s-fork = 0px 0px 0px 0px 32px 32px 64px 64px 'sprite.png';
-    $s-github = 32px 0px -32px 0px 32px 32px 64px 64px 'sprite.png';
-    $s-twitter = 0px 32px 0px -32px 32px 32px 64px 64px 'sprite.png';
+$s-desserts = 0px 0px 0px 0px 34px 33px 134px 112px 'sprite.png';
+$s-fork = 70px 0px -70px 0px 32px 32px 134px 112px 'sprite.png';
+$s-github = 0px 59px 0px -59px 32px 32px 134px 112px 'sprite.png';
+$s-main = 0px 33px 0px -33px 40px 26px 134px 112px 'sprite.png';
+$s-pies = 102px 0px -102px 0px 32px 28px 134px 112px 'sprite.png';
+$s-salads = 34px 0px -34px 0px 36px 29px 134px 112px 'sprite.png';
+$s-side_dizhes = 0px 91px 0px -91px 36px 21px 134px 112px 'sprite.png';
+$s-soups = 64px 59px -64px -59px 36px 26px 134px 112px 'sprite.png';
+$s-twitter = 32px 59px -32px -59px 32px 32px 134px 112px 'sprite.png';
