--- a/src/style/_common/_font/_font.styl
+++ b/src/style/_common/_font/_font.styl
@@ -1,1 +1,28 @@
 @import '__'
+
+@font-face {
+	font-family: 'latolight';
+	src: url('../fonts/lato/lato-light.eot');
+	src: url('../fonts/lato/lato-light.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/lato/lato-light.woff') format('woff'),
+		url('../fonts/lato/lato-light.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'latoregular';
+	src: url('../fonts/lato/lato-regular.eot');
+	src: url('../fonts/lato/lato-regular.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/lato/lato-regular.woff') format('woff'),
+		url('../fonts/lato/lato-regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'nautilus';
+	src: url('../fonts/Nautilus.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
