--- a/src/style/_common/_base/_base__constants.styl
+++ b/src/style/_common/_base/_base__constants.styl
@@ -6,4 +6,6 @@ $desktop = "screen and (min-width= 1025px) and (max-width= 1499px)";
 $hr-desktop = "screen and (min-width= 1500px)";
 $retina = (-webkit-min-device-pixel-ratio= 2), (min-resolution= 192dpi);
 
-$canvas-width = 1000px
+$_b__canvas-width = 1160px
+$_b__canvas-gap-unit = 8px
+$_b__canvas-offset = $_b__canvas-gap-unit * 4
