--- a/src/style/_common/_color/_color__constants.styl
+++ b/src/style/_common/_color/_color__constants.styl
@@ -5,4 +5,11 @@ $_c__white = #fff
 /** @color Белый активный/наведённый */
 $_c__white-active = #fff2f5
 
-$_c__light = #e7e7e7
+$_c__light  = #e7e7e7
+$_c__light2 = #f7f7f7
+$_c__light3 = #e5e5e5
+
+$_c__dark = #333333
+$_c__dark-active = #262626
+$_c__green = #95b300
+$_c__green-active = #a3be00
