--- a/src/style/_common/_typography/_typography__constants.styl
+++ b/src/style/_common/_typography/_typography__constants.styl
@@ -1,6 +1,6 @@
 /** @typography Заголовок первого уровня */
 $_t__style-h1 = {
-  font-family: $_f__common
+  font-family: $_f__nautilus
   font-weight: 300
   font-size: 38px
   line-height: 44px
@@ -8,7 +8,7 @@ $_t__style-h1 = {
 
 /** @typography Заголовок второго уровня */
 $_t__style-h2 = {
-  font-family: $_f__common
+  font-family: $_f__nautilus
   font-weight: 300
   font-size: 32px
   line-height: 38px
