--- a/src/templates/components/header.jade
+++ b/src/templates/components/header.jade
@@ -1,1 +1,6 @@
-// Header
+//header
+header.header
+	.header__container
+		a(href="#").header__logo
+		a(href="#").link.link_gray главная
+		a(href="#").link.link_gray контакты
