--- a/src/templates/base.jade
+++ b/src/templates/base.jade
@@ -17,7 +17,8 @@ html(lang='ru')
 		block header
 			include components/header
 				
-		block content
+		.content
+			block content
 			
 		block footer
 			include components/footer
