Пример работы миксина, для создания адаптива

--- a/src/style/_common/_base/_base__constants.styl
+++ b/src/style/_common/_base/_base__constants.styl
@@ -2,8 +2,8 @@
 $_b__mobile = 'screen and (max-width: 768px)'
 $_b__mobile-portrait = 'screen and (max-width: 480px)'
 $_b__mobile-landscape = 'screen and (min-width: 481px) and (max-width: 768px)'
-$_b__tablet = "screen and (min-width: 769px) and (max-width: 1024px)"
-$_b__desktop = "screen and (min-width: 1025px) and (max-width: 1499px)"
+$_b__tablet = 'screen and (min-width: 769px) and (max-width: 1024px)'
+$_b__desktop = 'screen and (min-width: 1025px) and (max-width: 1499px)'
 $_b__hr-desktop = 'screen and (min-width: 1500px)'
 $_b__retina = '(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)'
 
