--- a/src/style/_common/_svg-icon/_svg-icon__constants.styl
+++ b/src/style/_common/_svg-icon/_svg-icon__constants.styl
@@ -1,15 +1,15 @@
-$_i__book = '\ea01'
-$_i__brush = '\ea02'
-$_i__eraser = '\ea03'
-$_i__eye = '\ea04'
-$_i__eyedropper = '\ea05'
-$_i__paintbucket = '\ea06'
-$_i__pencil = '\ea07'
-$_i__photo = '\ea08'
-$_i__text = '\ea09'
+$_i__Book = '\ea01'
+$_i__Brush = '\ea02'
+$_i__Eraser = '\ea03'
+$_i__Eye = '\ea04'
+$_i__Eyedropper = '\ea05'
+$_i__Paintbucket = '\ea06'
+$_i__Pencil = '\ea07'
+$_i__Photo = '\ea08'
+$_i__Text = '\ea09'
 
 
 // Все иконки
-$_allIcons = book,brush,eraser,eye,eyedropper,paintbucket,pencil,photo,text
+$_allIcons = Book,Brush,Eraser,Eye,Eyedropper,Paintbucket,Pencil,Photo,Text
 
 $_i__font-name = svg-icons
