--- a/src/style/_common/_base/_base__constants.styl
+++ b/src/style/_common/_base/_base__constants.styl
@@ -1,9 +1,11 @@
-$mobile = "screen and (max-width= 768px)";
-$mobile-portrait = "screen and (max-width= 480px)";
-$mobile-landscape = "screen and (min-width= 481px) and (max-width= 768px)";
-$tablet = "screen and (min-width= 769px) and (max-width= 1024px)";
-$desktop = "screen and (min-width= 1025px) and (max-width= 1499px)";
-$hr-desktop = "screen and (min-width= 1500px)";
-$retina = (-webkit-min-device-pixel-ratio= 2), (min-resolution= 192dpi);
+// Медиа запросы
+$_b__mobile = 'screen and (max-width: 768px)'
+$_b__mobile-portrait = 'screen and (max-width: 480px)'
+$_b__mobile-landscape = 'screen and (min-width: 481px) and (max-width: 768px)'
+$_b__tablet = "screen and (min-width: 769px) and (max-width: 1024px)"
+$_b__desktop = "screen and (min-width: 1025px) and (max-width: 1499px)"
+$_b__hr-desktop = 'screen and (min-width: 1500px)'
+$_b__retina = '(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)'
 
-$canvas-width = 1000px
+$_b__canvas-width = 1000px
+$_b__gap-size = 60px
