--- a/src/style/pages/index.styl
+++ b/src/style/pages/index.styl
@@ -1,1 +1,8 @@
-// Page index
+// Небольшой пример
+h1
+	font-size: 24px
+	color: $_c__black
+
+	+media($_b__mobile)
+		background $_c__black
+		color: $_c__white
