правки по архитектуре

--- a/src/style/_common/_svg-icon/_svg-icon__mixins.styl
+++ b/src/style/_common/_svg-icon/_svg-icon__mixins.styl
@@ -18,6 +18,7 @@ _svg-icon__styles($unicode)
 	line-height: 1
 	-webkit-font-smoothing: antialiased
 	-moz-osx-font-smoothing: grayscale
+	user-select: none
 
 _svg-icon__all($icons)
 	for $icon in $icons
