--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -1,4 +1,3 @@
-@require '_common/*'
-@require '_common/_vendor/*'
-@require 'components/*'
-@require 'pages/*'
+@import '_common/*/*'
+@import 'components/*/*'
+@import 'pages/*'
