--- a/src/style/_common/_color/__.styl
+++ b/src/style/_common/_color/__.styl
@@ -1,2 +1,8 @@
-@import '_color__constants'
-@import '_color__mixins'
+/** @color Чёрный */
+$_c__black = #000
+/** @color Белый */
+$_c__white = #fff
+/** @color Белый активный/наведённый */
+$_c__white-active = #fff2f5
+
+$_c__light = #e7e7e7
