--- a/src/style/_common/_grid/__.styl
+++ b/src/style/_common/_grid/__.styl
@@ -1,2 +1,12 @@
-@import '_grid__constants'
-@import '_grid__mixins'
+/**
+ * @param {number} $step - высота/ширина одного элемента
+ * @param {number} $col - количество итераций
+ * @param {string} $prefix - префикс. (s)mall / (m)edium / (l)arge
+ */
+
+grid($step, $col, $prefix)
+	for i in (1..$col)
+		.col-{$prefix}-{i}
+			width: $step * i
+
+
