Исправил баг, с работой миксина для генерации svg-иконок

--- a/src/style/_common/_svg-icon/_svg-icon__mixins.styl
+++ b/src/style/_common/_svg-icon/_svg-icon__mixins.styl
@@ -23,4 +23,4 @@ _svg-icon__styles($unicode)
 _svg-icon__all($icons)
 	for $icon in $icons
 		.icon_{$icon}
-			_svg-icon($icon)
+			_svg-icon(lookup('$_i__'+$icon))
